# ProtoStocks

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
schemas/: schemas.py
